<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
<!--    <item-->
<!--        android:id="@+id/navigation_search"-->
<!--        android:icon="@drawable/ic_baseline_search_24"-->
<!--        android:title="@string/search" />-->
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/cart" />
    />
    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_baseline_reorder_24"
        android:title="@string/orders" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account" />

</menu>