<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_above="@id/reg_username"
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_name"/>
    <EditText
        android:layout_above="@id/text5"
        android:id="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_above="@id/reg_surname"
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_surname"/>
    <EditText
        android:layout_above="@id/text2"
        android:id="@+id/reg_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_above="@id/reg_email"
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_email"/>
    <EditText
        android:layout_above="@id/text3"
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_centerVertical="true"
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_password"/>
    <EditText
        android:layout_below="@id/text3"
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_below="@id/reg_password"
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_phone"/>
    <EditText
        android:layout_below="@id/text4"
        android:id="@+id/reg_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
    <Button
        android:layout_below="@id/reg_phone"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/orLogin"
        android:text="@string/or_login"
        android:layout_below="@id/btn_register"
        android:layout_marginTop="20dp"/>

</RelativeLayout>