<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/primary">

    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/account_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_baseline_account_circle_24"
        />

    <TextView
        android:textColor="@color/text"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_image"
        android:layout_marginLeft="20dp"
        android:text="Przyklad"
        android:textSize="20sp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_below="@id/Username"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/text"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_below="@id/logout_button"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/author"
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_info"
        android:layout_below="@id/checkbox"
        android:padding="10dp"
        android:textSize="15sp"/>


</RelativeLayout>