<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <TextView
        android:id="@+id/text"
        android:background="@color/secondary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_cart"
        android:textSize="25sp"
        android:textColor="@color/text"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/text"
        android:id="@+id/recycler_view_cart"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:paddingBottom="60dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/secondary"
        android:layout_marginBottom="55dp">
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="0dp"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:text="@string/total"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/total_price"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text2"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="0dp"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:text="cena" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_share_24"
            android:backgroundTint="@color/third"
            android:padding="10dp"
            android:layout_marginTop="1.5dp"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/share"
            android:backgroundTint="@color/third"
            android:text="@string/order_btn"
            android:textSize="13sp"
            android:padding="10dp"/>

    </RelativeLayout>

</RelativeLayout>